--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,10 @@
         <artifactId>proteins</artifactId>
         <version>0.0.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.theseed</groupId>
+    	<artifactId>core</artifactId>
+    	<version>0.0.9</version>
+    </dependency>
   </dependencies>
 </project>
