--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
         <groupId>org.theseed</groupId>
         <artifactId>p3api</artifactId>
-        <version>0.0.1</version>
+        <version>1.0.0</version>
     </dependency>
     <dependency>
         <groupId>commons-io</groupId>
@@ -75,14 +75,14 @@
         <version>0.9.0</version>
     </dependency>
     <dependency>
-        <groupId>org.theseed.genomes</groupId>
-        <artifactId>proteins</artifactId>
-        <version>0.0.1</version>
-    </dependency>
-    <dependency>
         <groupId>org.theseed</groupId>
         <artifactId>core</artifactId>
         <version>0.0.9</version>
+    </dependency>
+    <dependency>
+        <groupId>org.theseed</groupId>
+        <artifactId>kmers.reps</artifactId>
+        <version>1.0.0</version>
     </dependency>
   </dependencies>
 </project>
